Worker authentication added.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,11 @@ set(CMAKE_CXX_STANDARD 26)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 find_package(Boost 1.85.0 REQUIRED COMPONENTS charconv system date_time regex url json fiber thread program_options random)
+find_package(OpenSSL REQUIRED)
 
 include_directories(${Boost_INCLUDE_DIRS})
+include_directories(${OPENSSL_INCLUDE_DIR})
+link_directories(${OPENSSL_LIBRARIES})
 
 add_executable(Serve
         main.cpp
@@ -27,6 +30,7 @@ add_executable(Serve
         network/path_cat.hpp
         state.hpp
         queue.hpp
+        cipher.hpp
 )
 
-target_link_libraries(Serve PUBLIC ${Boost_LIBRARIES})
+target_link_libraries(Serve PUBLIC ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES})
